@@ -29,11 +29,11 @@ namespace sbuild
    * A chroot stored on an LVM logical volume (LV).  A snapshot LV
    * will be created and mounted on demand.
    */
-  class ChrootLvmSnapshot : public ChrootBlockDevice
+  class chroot_lvm_snapshot : public chroot_block_device
   {
   protected:
     /// The constructor.
-    ChrootLvmSnapshot();
+    chroot_lvm_snapshot();
 
     /**
      * The constructor.  Initialise from an open keyfile.
@@ -41,14 +41,14 @@ namespace sbuild
      * @param keyfile the configuration file
      * @param group the keyfile group (chroot name)
      */
-    ChrootLvmSnapshot (keyfile const&     keyfile,
-		       std::string const& group);
+    chroot_lvm_snapshot (keyfile const&     keyfile,
+			 std::string const& group);
 
     friend class chroot;
 
   public:
     /// The destructor.
-    virtual ~ChrootLvmSnapshot();
+    virtual ~chroot_lvm_snapshot();
 
     virtual chroot::chroot_ptr
     clone () const;
